<resources>
    <string name="app_name">澳泉医销网</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">测试</string>

    <!--登录注册-->
    <string name="login_name">用户登录</string>
    <string name="login_phone">请输入您的用户名/手机号码</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_phone_login">手机验证登录</string>
    <string name="login_forget_pwd">找回密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_third_login">第三方登录</string>
    <string name="login_qq_login">QQ登录</string>
    <string name="login_wechat_login">微信登录</string>
    <string name="register_phone">请输入您的手机号码</string>
    <string name="register_code">请输入手机验证码</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_pwd_">请再次输入密码</string>
    <string name="register_clinic_name">诊所名称</string>
    <string name="register_name">请输入昵称</string>
    <string name="third_login_now">立即登录</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_confirm">确定</string>
    <string name="login_details">为了给您更好的服务，请关联一个澳泉医销网帐号</string>
    <string name="login_register_quick">快速注册</string>
    <string name="login_quick_relevance">立即关联</string>
    <string name="login_relevance">关联</string>

    <!--首页-->
    <string name="app_m_home">首页</string>
    <string name="app_m_sort">分类</string>
    <string name="app_m_brand">品牌库</string>
    <string name="app_m_cart">购物车</string>
    <string name="app_m_people">我的</string>
    <!--个人中心-->
    <string name="app_people_test">Test测试</string>
    <string name="app_people_test_number">12</string>
    <string name="app_people_realName">[实名认证]</string>
    <string name="app_people_goodsAttention">商品关注</string>
    <string name="app_people_shopAttention">店铺关注</string>
    <string name="app_people_brandAttention">品牌关注</string>
    <string name="app_people_footprint">我的足迹</string>
    <string name="app_people_all_order">全部订单</string>
    <string name="app_people_looker_all">查看全部</string>
    <string name="app_people_obligation">待付款</string>
    <string name="app_people_shipments">待发货</string>
    <string name="app_people_Receiving">待收货</string>
    <string name="app_people_after_sale">退换/售后</string>
    <string name="app_people_asset">我的资产</string>
    <string name="app_people_change">我的零钱</string>
    <string name="app_people_coupon">我的优惠卷</string>
    <string name="app_people_integral">我的积分</string>
    <string name="app_people_statistics">我的积分</string>
    <string name="app_people_edit_pwd">修改密码</string>
    <string name="app_people_logout">退出登录</string>
    <!--报表统计-->
    <string name="app_statistics_month">月度消费报表统计</string>
    <string name="app_statistics_month_total">总消费：</string>
    <!--商品关注-->
    <string name="app_people_attention_title">商品关注</string>
    <string name="app_people_attention_edit">编辑</string>
    <!--店铺关注-->
    <string name="app_people_shop_title">店铺关注</string>
    <string name="app_people_shop_edit">编辑</string>
    <!--品牌关注-->
    <string name="app_people_brand_title">品牌关注</string>
    <string name="app_people_brand_edit">编辑</string>
    <!--我的足迹-->
    <string name="app_people_footprint_title">我的足迹</string>
    <string name="app_people_footprint_edit">编辑</string>
    <!--我的零钱-->
    <string name="app_people_change_title">我的零钱</string>
    <!--我的优惠卷-->
    <string name="app_people_coupon_title">我的优惠卷</string>
    <!--我的积分-->
    <string name="app_people_integral_title">我的积分</string>
    <!--会员资料-->
    <string name="app_people_member_title">会员资料</string>
    <!--我的订单-->
    <string name="app_people_indent_title">我的订单</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <!--商品规格选择-->
    <string name="comm_price_format">¥ %s</string>

    <string name="product_detail">商品详情</string>
    <string name="product_detail_sku_quantity">购买数量</string>
    <string name="product_detail_sku_confirm">确定</string>
    <string name="product_detail_sku_recommend_price">价格：¥%1$s/%2$s</string>
    <string name="product_detail_sku_stock">(库存:%1$s)</string>
    <string name="product_detail_sku_quantity_over">购买数量超出最大库存，请修改购买数量</string>
    <string name="product_detail_sku_quantity_empty">购买数量不能为空</string>
    <string name="product_detail_sku_add_succeed">商品添加成功，请前往进货单查看</string>
    <string name="title_activity_coupon_list">CouponListActivity</string>
</resources>
