<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.likeit.aqe365.activity.main.fragment.MainPeopleFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_bg"
            android:padding="@dimen/dp_10">

            <com.likeit.aqe365.view.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/width50"
                android:layout_height="@dimen/width50"
                android:layout_margin="20dp"
                android:src="@mipmap/icon_default_picture" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_avatar"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_people_test"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/app_people_realName"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/icon_people_set" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_goodsAttention_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_test_number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_goodsAttention_number"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_goodsAttention"
                    android:textSize="@dimen/font_normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_shopAttention_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_test_number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_shopAttention_number"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_shopAttention"
                    android:textSize="@dimen/font_normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_brandAttention_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_test_number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_brandAttention_number"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_brandAttention"
                    android:textSize="@dimen/font_normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_footprint_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_test_number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_footprint_number"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_horizontal"
                    android:text="@string/app_people_footprint"
                    android:textSize="@dimen/font_normal" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_all_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/app_people_all_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/app_people_looker_all"
                android:textColor="@color/register_text_color" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_obligation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_pendingpayment"
                android:gravity="center_horizontal"
                android:text="@string/app_people_obligation"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_shipments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_goodsreceipt"
                android:gravity="center_horizontal"
                android:text="@string/app_people_shipments"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_Receiving"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_pendingpayment"
                android:gravity="center_horizontal"
                android:text="@string/app_people_Receiving"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_after_sale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_customerservice"
                android:gravity="center_horizontal"
                android:text="@string/app_people_after_sale"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_asset01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/app_people_asset" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_my_change"
                android:gravity="center_horizontal"
                android:text="@string/app_people_change"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_coupon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_my_coupon"
                android:gravity="center_horizontal"
                android:text="@string/app_people_coupon"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_integral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/icon_people_my_points"
                android:gravity="center_horizontal"
                android:text="@string/app_people_integral"
                android:textSize="@dimen/font_normal" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_asset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/app_people_asset" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"></View>

        <com.likeit.aqe365.view.MyGridView
            android:id="@+id/MyGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:numColumns="4"
            android:layout_marginBottom="@dimen/width50"
            android:padding="@dimen/dp_10"
            android:verticalSpacing="5dip"></com.likeit.aqe365.view.MyGridView>
    </LinearLayout>

</ScrollView>
